--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,24 +34,37 @@ absl-py = "^1.2.0"
 typing_extensions = "^4.4.0"
 importlib-metadata = { version = "^4.2", markers = "python_version <= '3.10'" }
 
-[tool.poetry.dev-dependencies]
-black = {version = "^22.8.0"}
-coverage = {version = "^6.4.4"}
-flake8 = {version = "*"}
-Flake8-pyproject = {version = "*"}
-nox = {version = "^2022.8.7"}
-nox-poetry = {version = "^1.0.1"}
-pre-commit = {version = "^2.20.0"}
+black = {version = "^22.8.0", optional=true}
+coverage = {version = "^6.4.4", optional=true}
+flake8 = {version = "*", optional=true}
+Flake8-pyproject = {version = "*", optional=true}
+nox = {version = "^2022.8.7", optional=true}
+nox-poetry = {version = "^1.0.1", optional=true}
+pre-commit = {version = "^2.20.0", optional=true}
+pyperf = {version = "^2.4.1", optional=true}
+psutil = {version = "^5.9.2", optional=true}
+mkdocs = {version = "1.3.1", optional=true}
+mkdocs-material = {version = "8.3.9", optional=true}
+mkdocstrings = {version = "0.19", optional=true}
+mkdocstrings-python = {version = "0.7.1", optional=true}
+mkdocs-version-annotations = {version = "1.0.0", optional=true}
+sigstore = {version = "^1.0.0", optional=true}
+isort = {version = "^5.11.4", optional=true}
+
+
+[tool.poetry.extras]
+devtools = [
+    "black", "coverage", "flake8", "Flake8-pyproject", "nox", "nox-poetry", "pre-commit",
+    "pyperf", "psutil", "sigstore", "isort"
+]
+docs = ["mkdocs", "mkdocs-material", "mkdocstrings", "mkdocstrings-python",
+    "mkdocs-version-annotations"]
+
+[tool.poetry.group.dev]
+optional = true
+
+[tool.poetry.group.dev.dependencies]
 pytest = {version = "^7.1.3"}
-pyperf = {version = "^2.4.1"}
-psutil = {version = "^5.9.2"}
-mkdocs = "1.3.1"
-mkdocs-material = "8.3.9"
-mkdocstrings = "0.19"
-mkdocstrings-python = "0.7.1"
-mkdocs-version-annotations = "1.0.0"
-sigstore = "^1.0.0"
-isort = "^5.11.4"
 
 [tool.poetry.scripts]
 aclgen = "aerleon.aclgen:EntryPoint"
